--- a/2-04052022/historia.html
+++ b/2-04052022/historia.html
@@ -20,7 +20,7 @@
     
 <nav>
     <ul>
-        <li><a href="index.html">home</a></li>
+        <li><a href="index2.html">home</a></li>
         <li><a href="historia.html">história</a></li>
         <li><a href="produtos.html">Produtos</a></li>
         <li><a href="doacoes.html">Doaçoes</a></li>
@@ -54,19 +54,22 @@
 
 
 <footer>
-    <div id="endereco"></div>
+    <div id="endereco"> 
           <p>
              Avenida Marechal Tito, 5699
              Itaim Paulista - São Paulo -SP 
              CEP: 08115-100
              Telefone: 11-99568-2021
           </p>
-    <div id="redes"></div>
+        </div>
+    <div id="redes">
           <ul>
               <li><a href="http://www.instragram.com"><img src="img/instagram.png" alt="Nosso instragram"></a></li>
               <li><a href="http://www.youtube.com"><img src="img/youtube.png" alt="Nosso Canal do Youtube"></a></li>
               <li><a href="http://www.facebook.com"><img src="img/facebook.png" alt="Nosso facebook"></a></li>
           </ul>
+
+        </div>
 </footer>
 
 </body>
