--- a/1-04052022/historia.html
+++ b/1-04052022/historia.html
@@ -54,19 +54,22 @@
 
 
 <footer>
-    <div id="endereco"></div>
+    <div id="endereco">
           <p>
              Avenida Marechal Tito, 5699
              Itaim Paulista - São Paulo -SP 
              CEP: 08115-100
              Telefone: 11-99568-2021
           </p>
-    <div id="redes"></div>
+        </div>
+    <div id="redes">
           <ul>
               <li><a href="http://www.instragram.com"><img src="img/instagram.png" alt="Nosso instragram"></a></li>
               <li><a href="http://www.youtube.com"><img src="img/youtube.png" alt="Nosso Canal do Youtube"></a></li>
               <li><a href="http://www.facebook.com"><img src="img/facebook.png" alt="Nosso facebook"></a></li>
           </ul>
+
+        </div>
 </footer>
 
 </body>
