--- a/2-04052022/Index2.html
+++ b/2-04052022/Index2.html
@@ -20,7 +20,7 @@
     
 <nav>
     <ul>
-        <li><a href="index.html">home</a></li>
+        <li><a href="index2.html">home</a></li>
         <li><a href="historia.html">história</a></li>
         <li><a href="produtos.html">Produtos</a></li>
         <li><a href="doacoes.html">Doaçoes</a></li>
