--- a/2-04052022/localizacao.html
+++ b/2-04052022/localizacao.html
@@ -20,7 +20,7 @@
     
 <nav>
     <ul>
-        <li><a href="index.html">home</a></li>
+        <li><a href="index2.html">home</a></li>
         <li><a href="historia.html">história</a></li>
         <li><a href="produtos.html">Produtos</a></li>
         <li><a href="doacoes.html">Doaçoes</a></li>
@@ -29,25 +29,30 @@
 </nav>
 
 <main>
-
+    <h2>Onde estamos</h2>
+    <div id="mapa">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14621.86896312541!2d-46.526325530224575!3d-23.62343240000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce43ec2529d671%3A0xddc9d2b3bb044ed5!2sHouse%20Of%20Pet%20-%20Banho%20e%20Tosa!5e0!3m2!1spt-BR!2sbr!4v1651771952361!5m2!1spt-BR!2sbr"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+       </div>
 
 </main>
 
 
 <footer>
-    <div id="endereco"></div>
+    <div id="endereco"> 
           <p>
              Avenida Marechal Tito, 5699
              Itaim Paulista - São Paulo -SP 
              CEP: 08115-100
              Telefone: 11-99568-2021
           </p>
-    <div id="redes"></div>
+        </div>
+    <div id="redes">
           <ul>
               <li><a href="http://www.instragram.com"><img src="img/instagram.png" alt="Nosso instragram"></a></li>
               <li><a href="http://www.youtube.com"><img src="img/youtube.png" alt="Nosso Canal do Youtube"></a></li>
               <li><a href="http://www.facebook.com"><img src="img/facebook.png" alt="Nosso facebook"></a></li>
           </ul>
+        </div>
 </footer>
 
 </body>
